Update ZeroMQ version to local install.  Include FR/FP build.

--- a/build
+++ b/build
@@ -11,20 +11,21 @@ build()
     # and in turn this causes the python build to create an egg with a 'dirty' version.
 #    git checkout -- ../configure/RELEASE
     
-#    ${CMAKE_BIN}/cmake \
-#                       -DBoost_NO_BOOST_CMAKE=ON \
-#                       -DODINDATA_ROOT_DIR=${ODIN_DATA_PREFIX} \
-#                       -DZEROMQ_ROOTDIR=${ZEROMQ_PREFIX} \
-#                       -DLOG4CXX_ROOT_DIR=${LOG4CXX_PREFIX} \
-#                       -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON \
-#                       -DCMAKE_INSTALL_PREFIX=${TARGET_PREFIX} \
-#                       ${BUILD_SCRIPT_DIR}/data
-#    make VERBOSE=1 && make install
+    ${CMAKE_BIN}/cmake \
+                       -DBoost_NO_BOOST_CMAKE=ON \
+                       -DODINDATA_ROOT_DIR=${ODIN_DATA_PREFIX} \
+                       -DLOG4CXX_ROOT_DIR=${LOG4CXX_PREFIX} \
+                       -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON \
+                       -DCMAKE_INSTALL_PREFIX=${TARGET_PREFIX} \
+                       ${BUILD_SCRIPT_DIR}/data
+    make VERBOSE=1 && make install
+
+    rm -rf ${BUILD_SCRIPT_DIR}/build_name/*
+
     
     ${CMAKE_BIN}/cmake \
                        -DBoost_NO_BOOST_CMAKE=ON \
                        -DODINDATA_ROOT_DIR=${ODIN_DATA_PREFIX} \
-                       -DZEROMQ_ROOTDIR=${ZEROMQ_PREFIX} \
                        -DLOG4CXX_ROOT_DIR=${LOG4CXX_PREFIX} \
                        -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON \
                        -DCMAKE_INSTALL_PREFIX=${TARGET_PREFIX} \
