--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,15 @@
         "system_error": "cpp",
         "*.ipp": "cpp"
     },
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "python.pythonPath": "/scratch/ovs72384/pipenv/xspress-jNPY9xKX/bin/python",
+    "prettier.configPath": ".prettierrc",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "prettier.enableDebugLogs": true
 }
