--- a/example-config/odin_server.cfg
+++ b/example-config/odin_server.cfg
@@ -2,10 +2,11 @@
 debug_mode = 1
 http_port  = 8888
 http_addr  = 0.0.0.0
-adapters   = control
+adapters   = control, fp, fr
+static_path = ./static
 
 [tornado]
-logging = error
+logging = debug
 
 [adapter.control]
 module = xspress_odin.adapter.XspressAdapter
@@ -13,16 +14,22 @@ endpoint = 127.0.0.1:12000
 base_ip = 192.168.0.1
 num_cards = 4
 max_channels = 36
+max_spectra = 4096
 num_tf = 16384
 settings_path = /dls_sw/b18/epics/xspress4/xspress4.36chan_pb/settings
 debug = 2
+logging = debug
+trigger_mode = burst
+frames = 10
+exposure_time = 1.0
 
 [adapter.fp]
-module = odin_data.frame_processor_adapter.FrameProcessorAdapter
-endpoints = 127.0.0.1:5004
-update_interval = 2
+module = odin_data.fp_compression_adapter.FPCompressionAdapter
+endpoints = 127.0.0.1:10004, 127.0.0.1:10014, 127.0.0.1:10024, 127.0.0.1:10034, 127.0.0.1:10044, 127.0.0.1:10054, 127.0.0.1:10064, 127.0.0.1:10074, 127.0.0.1:10084
+update_interval = 5
+datasets = data,data2
 
 [adapter.fr]
 module = odin_data.frame_receiver_adapter.FrameReceiverAdapter
-endpoints = 127.0.0.1:5050
-update_interval = 0.2
+endpoints = 127.0.0.1:10000, 127.0.0.1:10010, 127.0.0.1:10020, 127.0.0.1:10030, 127.0.0.1:10040, 127.0.0.1:10050, 127.0.0.1:10060, 127.0.0.1:10070, 127.0.0.1:10080
+update_interval = 5
