--- a/control/xspress/Pipfile
+++ b/control/xspress/Pipfile
@@ -4,11 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-odin-data = {file = "file:///dls/science/users/ovs72384/support-modules/odin-data/1-7-0dls1/tools/python"}
-odin-control = {file = "file:///dls/science/users/ovs72384/support-modules/odin-control/1-1-0dls1"}
-pyzmq = "22.3.0"
-tornado = "6.1"
-xspress-detector = {editable = true, path = "."}
+xspress-odin = {editable = true, path = "."}
 
 [dev-packages]
 
