setup.cfg: we are using odin-contrl and odin-data from Pipfile for development.

--- a/control/xspress/setup.cfg
+++ b/control/xspress/setup.cfg
@@ -22,8 +22,8 @@ package_dir =
     =src
 
 install_requires =
-     odin-control>=1.1.0+dls3
-     odin-data
+    #  odin-control>=1.1.0+dls3
+    #  odin-data
      configparser
      pyzmq==22.3.0
      tornado==6.1
