(adapter|detector|client|server).py: * refactor client so we can use async await when    blocking requests are needed. * detector.configure: don't send config message    automatically, as it would wipe the wrapper server    state if only the odin process is restarted. * Add a logging param to change logging level at    runtime.

--- a/example-config/odin_server.cfg
+++ b/example-config/odin_server.cfg
@@ -2,26 +2,23 @@
 debug_mode = 1
 http_port  = 8888
 http_addr  = 0.0.0.0
-adapters   = control, fp, fr
+adapters   = xsp
 static_path = ./static
 
 [tornado]
 logging = debug
 
-[adapter.control]
+[adapter.xsp]
 module = xspress_odin.adapter.XspressAdapter
 endpoint = 127.0.0.1:12000
-base_ip = 192.168.0.1
 num_cards = 4
+num_tf = 16384
+base_ip = 192.168.0.1
 max_channels = 36
 max_spectra = 4096
-num_tf = 16384
 settings_path = /dls_sw/b18/epics/xspress4/xspress4.36chan_pb/settings
+run_flags = 2
 debug = 2
-logging = debug
-trigger_mode = burst
-frames = 10
-exposure_time = 1.0
 
 [adapter.fp]
 module = odin_data.fp_compression_adapter.FPCompressionAdapter
