parameter_tree.py: implement a parameter tree that can has verbs:   * get: for retrieving values by EPICS client.   * put: for setting values on CPP server by EPICS client.   * set:  for setting current values on CPP server to be cached by the python adaptor. Parameters validate type of values when set and put is called. And support passing arbitrary validators to be checked at runtime. ListParametors have a special method "put_element" that caches the new list value until the value is accepted by the CPP server.

--- a/control/xspress/Pipfile
+++ b/control/xspress/Pipfile
@@ -9,6 +9,8 @@ odin-control = {editable = true, path = "/dls_sw/work/R3.14.12.7/support/xspress
 odin-data = {editable = true, path = "/dls_sw/work/R3.14.12.7/support/xspress-odin/odin-data/tools/python"}
 
 [dev-packages]
+pytest = "*"
+pytest-asyncio = "*"
 
 [pipenv]
 allow_prereleases = true
