--- a/control/xspress/setup.cfg
+++ b/control/xspress/setup.cfg
@@ -72,14 +72,14 @@ extend-ignore =
     E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
     F811, # support typing.overload decorator
 
-[tool:pytest]
-# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
-# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
-addopts =
-    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
-    --cov=dls_python3_skeleton --cov-report term --cov-report xml:cov.xml
-# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
-filterwarnings = error
+# [tool:pytest]
+# # Run pytest with all our checkers, and don't spam us with massive tracebacks on error
+# # Run pytest with all our checkers, and don't spam us with massive tracebacks on error
+# addopts =
+#     --tb=native -vv --doctest-modules --doctest-glob="*.rst"
+#     --cov=dls_python3_skeleton --cov-report term --cov-report xml:cov.xml
+# # https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
+# filterwarnings = error
 
 [coverage:run]
 # This is covered in the versiongit test suite so exclude it here
