Added live view merge python application.

--- a/control/xspress/setup.cfg
+++ b/control/xspress/setup.cfg
@@ -55,6 +55,7 @@ exclude =
 # Include a command line script
 console_scripts =
     xspress_odin = xspress_odin.server:main
+    xspress_live_merge = xspress_odin.live_view_merge:main
 
 [mypy]
 # Ignore missing stubs for modules we use
