detector.py: daq_endpoints need to be in config file.

--- a/example-config/odin_server.cfg
+++ b/example-config/odin_server.cfg
@@ -19,6 +19,15 @@ max_spectra = 4096
 settings_path = /dls_sw/b18/epics/xspress4/xspress4.36chan_pb/settings
 run_flags = 2
 debug = 2
+daq_endpoints =  tcp://127.0.0.1:15150,
+                 tcp://127.0.0.1:15151,
+                 tcp://127.0.0.1:15152,
+                 tcp://127.0.0.1:15153,
+                 tcp://127.0.0.1:15154,
+                 tcp://127.0.0.1:15155,
+                 tcp://127.0.0.1:15156,
+                 tcp://127.0.0.1:15157,
+                 tcp://127.0.0.1:15158
 
 [adapter.fp]
 module = odin_data.fp_compression_adapter.FPCompressionAdapter
