--- a/control/xspress/setup.cfg
+++ b/control/xspress/setup.cfg
@@ -22,19 +22,21 @@ package_dir =
     =src
 
 install_requires =
-    #  odin-control>=1.1.0+dls3
-    #  odin-data
+     odin-control==1.2.0+dls1
+     odin-data==1.7.0+dls1
      configparser
-     pyzmq==22.3.0
-     tornado==6.1
 
 [options.extras_require]
 # For development tests/docs
 dev =
-    black==21.9b0
+    black==22.3.0
     isort>5.0
     pytest-cov
+    pytest-asyncio
     mypy
+    # remove this dependency once flake8 has dropped "importlib-metadata <=4.3"
+    # https://github.com/PyCQA/flake8/pull/1438
+    flake8 <= 3.9.2
     flake8-isort
     sphinx-rtd-theme-github-versions
     pre-commit
@@ -55,6 +57,7 @@ exclude =
 # Include a command line script
 console_scripts =
     xspress_odin = xspress_odin.server:main
+    xspress_meta_writer = odin_data.meta_writer.meta_writer_app:main
     xspress_live_merge = xspress_odin.live_view_merge:main
 
 [mypy]
