Rename python package to xspress-detector.

--- a/control/xspress/setup.cfg
+++ b/control/xspress/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = xspress-odin
+name = xspress-detector
 description = A Python based odin-control interface library to the Xspress Detector
 url = https://gitlab.diamond.ac.uk/controls/tools/xspress-detector
 author = Omar Elamin
