Added a README for the python control module.

--- a/control/xspress/setup.cfg
+++ b/control/xspress/setup.cfg
@@ -5,8 +5,8 @@ url = https://gitlab.diamond.ac.uk/controls/tools/xspress-detector
 author = Omar Elamin
 author_email = omar.elamin@diamond.ac.uk
 license = Apache License 2.0
-long_description = file: README.rst
-long_description_content_type = text/x-rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 classifiers =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
@@ -23,7 +23,7 @@ package_dir =
 
 install_requires =
      odin-control==1.2.0+dls1
-     odin-data==1.7.0+dls2
+     odin-data==1.7.0+dls3
      configparser
 
 [options.extras_require]
