--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -10,55 +10,43 @@ long_description_content_type = text/markdown
 classifiers =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.7
 packages = find:
+# =src is interpreted as {"": "src"}
+# as per recommendation here https://hynek.me/articles/testing-packaging/
 package_dir =
     =src
 
 install_requires =
-     odin-control==1.3.0+dls1
-     odin-data==1.7.0+dls4
+     odin-data[meta_writer]>=1.7.0+dls4
      configparser
 
 [options.extras_require]
 # For development tests/docs
 dev =
-    black==22.3.0
-    isort>5.0
-    pytest-cov
-    pytest-asyncio
+    black
     mypy
     # remove this dependency once flake8 has dropped "importlib-metadata <=4.3"
     # https://github.com/PyCQA/flake8/pull/1438
     flake8 <= 3.9.2
     flake8-isort
+    pytest-cov
+    pytest-asyncio
     sphinx-rtd-theme-github-versions
     pre-commit
 
-# If you want to include data files in packages,
-# set this to True and include a MANIFEST.in file.
-include_package_data = True
-
 [options.packages.find]
 where=src
-# Don't include our tests directory in the distribution
-exclude = 
-    tests
-    docs
-    sandbox
 
 [options.entry_points]
 # Include a command line script
 console_scripts =
-    xspress_odin = xspress_odin.server:main
+    xspress_control = xspress_detector.control.server:main
     xspress_meta_writer = odin_data.meta_writer.meta_writer_app:main
-    xspress_live_merge = xspress_odin.live_view_merge:main
+    xspress_live_merge = xspress_detector.control.live_view_merge:main
 
 [mypy]
 # Ignore missing stubs for modules we use
@@ -76,23 +64,29 @@ extend-ignore =
     E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
     F811, # support typing.overload decorator
 
-# [tool:pytest]
-# # Run pytest with all our checkers, and don't spam us with massive tracebacks on error
-# # Run pytest with all our checkers, and don't spam us with massive tracebacks on error
-# addopts =
-#     --tb=native -vv --doctest-modules --doctest-glob="*.rst"
-#     --cov=dls_python3_skeleton --cov-report term --cov-report xml:cov.xml
-# # https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
-# filterwarnings = error
+[tool:pytest]
+# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
+addopts =
+    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
+    --cov=xspress_detector --cov-report term --cov-report xml:cov.xml
+# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
+filterwarnings = error
+# Doctest python code in docs, python code in src docstrings, test functions in tests
+testpaths =
+    docs src tests
 
 [coverage:run]
-# This is covered in the versiongit test suite so exclude it here
-omit = */_version_git.py
-data_file = /tmp/dls_python3_skeleton.coverage
+data_file = /tmp/xspress_detector.coverage
 
 [coverage:paths]
 # Tests are run from installed location, map back to the src directory
 source =
     src
     **/site-packages/
-    
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/xspress_detector/_version.py
+versionfile_build = xspress_detector/_version.py
+tag_prefix=
