--- a/python/Pipfile
+++ b/python/Pipfile
@@ -1,11 +1,7 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
 
 [packages]
-xspress-odin = {editable = true, path = "."}
-
-[dev-packages]
-xspress-odin = {editable = true, extras = ["dev"], path = "."}
-
+xspress-detector = {path = "."}
