--- a/build
+++ b/build
@@ -1,39 +1,25 @@
-PROGRAM=xspress-detector
-VERSION=0.1.0
 TAR_FILE=none
 
 build()
 {
-    # Build server HACK alert!
-    # This is to unwind a change that the build server always appear to apply
-    # to configure/RELEASE: it stuffs the TOOLS_SUPPORT macro in there regardless of
-    # whether or not it is already there! This causes the git repo to have local changes
-    # and in turn this causes the python build to create an egg with a 'dirty' version.
-    git checkout -- ../configure/RELEASE
-    
-    ${CMAKE_BIN}/cmake \
-                       -DBoost_NO_BOOST_CMAKE=ON \
-                       -DODINDATA_ROOT_DIR=${ODIN_DATA_PREFIX} \
-                       -DLOG4CXX_ROOT_DIR=${LOG4CXX_PREFIX} \
-                       -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON \
-                       -DCMAKE_INSTALL_PREFIX=${TARGET_PREFIX} \
-                       ${BUILD_SCRIPT_DIR}/cpp
-    make VERBOSE=1 && make install
-
-    # Build a wheel for separate release to DLS python3 area
-    cd ${BUILD_SCRIPT_DIR}/control/xspress
-    rm -rf ${TARGET_PREFIX}/dist
-    dls-python3 setup.py bdist_wheel --dist-dir ${TARGET_PREFIX}/dist
-
-    # Copy to work distributions directory for python3ext release to find
-    if [[ ${is_test} == false ]]; then
-        DIST_DIR=/dls_sw/work/python3/RHEL7-x86_64/distributions
-        echo "Copying distribution files and Pipfile.lock to ${DIST_DIR}"
-        cp ${TARGET_PREFIX}/dist/* ${DIST_DIR}
-        cp Pipfile.lock ${DIST_DIR}/${_module}-${_version}.Pipfile.lock
-        echo "Run 'dls-release.py -t -a python3ext ${_module} ${_version}' to release to python3 area"
+    if [ -v is_test ]; then
+        # On the build server - fix dirty git tree
+        git checkout ../configure/RELEASE
     fi
 
+    echo "CMake Configure"
+    ${CMAKE_BIN}/cmake \
+        -DBoost_NO_BOOST_CMAKE=ON \
+        -DODINDATA_ROOT_DIR=${ODIN_DATA_PREFIX} \
+        -DLOG4CXX_ROOT_DIR=${LOG4CXX_PREFIX} \
+        -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON \
+        -DCMAKE_INSTALL_PREFIX=${TARGET_PREFIX} \
+        ${BUILD_SCRIPT_DIR}/cpp || Error "Configure failed"
+
+    echo "Build"
+    make -j8 VERBOSE=1 && make install || Error "Build failed"
+
+    # Install the static html files for the odin control server
+    mkdir ${TARGET_PREFIX}/html
+    cp -r ${BUILD_SCRIPT_DIR}/python/src/xspress_detector/control/static ${TARGET_PREFIX}/html/
 }
-
-
