--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -21,7 +21,7 @@ package_dir =
     =src
 
 install_requires =
-     odin-data[meta_writer]>=1.7.0+dls4
+     odin-data[meta_writer]==1.9.0+dls1
      configparser
 
 [options.extras_require]
