Remove custom server entrypoint

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -44,7 +44,7 @@ where=src
 [options.entry_points]
 # Include a command line script
 console_scripts =
-    xspress_control = xspress_detector.control.server:main
+    xspress_control = odin.main:main
     xspress_meta_writer = odin_data.meta_writer.meta_writer_app:main
     xspress_live_merge = xspress_detector.control.live_view_merge:main
 
