--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -21,7 +21,7 @@ package_dir =
     =src
 
 install_requires =
-    odin-data[meta_writer]==1.10.1+dls1
+    odin-data[meta_writer]>=1.10.1
     configparser
 
 [options.extras_require]
