--- a/example/xspress3/odin_server.cfg
+++ b/example/xspress3/odin_server.cfg
@@ -11,25 +11,25 @@ logging = error
 [adapter.xspress]
 module = xspress_detector.control.adapter.XspressAdapter
 endpoint = 127.0.0.1:12000
-num_cards = 2
+num_cards = 1
 num_tf = 16384
 base_ip = 192.168.0.1
 max_channels = 8
 max_spectra = 4096
-settings_path = xspress3/xspress3.cube+cube/settings
+settings_path = ~/xspress3_settings/2channel/
 run_flags = 2
 debug = 1
-num_process = 2
+num_process = 1
 daq_endpoints = tcp://127.0.0.1:15150,tcp://127.0.0.1:15151
 
 [adapter.fp]
-module = xspress_detector.control.fp_xspress_adapter.FPXspressAdapter
-endpoints = 127.0.0.1:10004,127.0.0.1:10014
+module = odin_data.control.frame_processor_adapter.FrameProcessorAdapter
+endpoints = 127.0.0.1:10004
 update_interval = 0.2
 
 [adapter.fr]
 module = odin_data.control.frame_receiver_adapter.FrameReceiverAdapter
-endpoints = 127.0.0.1:10000,127.0.0.1:10010
+endpoints = 127.0.0.1:10000
 update_interval = 0.2
 
 [adapter.meta_listener]
